Set baseurl to github

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <section class="main-page container">
     <div class="grid">
       <div class="three-of-four unit">
+        {{ site }}
         {% include _posts.html %}
       </div>
       <div class="one-of-four unit">
@@ -22,4 +23,3 @@
   {% include _footer.html %}
 </body>
 </html>
-
