Point index at posts_list layout

--- a/index.html
+++ b/index.html
@@ -1,24 +1,3 @@
 ---
+layout: posts_list
 ---
-<!DOCTYPE html>
-<html lang="en">
-{% include _head.html %}
-<body class="{{ page.body_css }} group">
-
-  {% include _header.html %}
-  {% include _carousel.html %}
-
-  <section class="main-page container">
-    <div class="grid">
-      <div class="three-of-four unit">
-        {% include _posts.html %}
-      </div>
-      <div class="one-of-four unit">
-        {% include _sidebar.html %}
-      </div>
-    </div>
-  </section>
-
-  {% include _footer.html %}
-</body>
-</html>
