Update Flight Path

--- a/flight-path/index.html
+++ b/flight-path/index.html
@@ -105,4 +105,25 @@ carousel_text: Flight Path
 
 <li class="path-city">Chicago, Illinois</li>
 <li class="date">June-August 2013</li>
+
+<li class="path-city">Lexington, Kentucky</li>
+<li class="date">September 2013</li>
+
+<li class="path-city">Columbus, Ohio</li>
+<li class="date">September 2013</li>
+
+<li class="path-city">Ann Arbor, Michigan</li>
+<li class="date">September 2013</li>
+
+<li class="path-city">Erie, Pennsylvania</li>
+<li class="date">September 2013</li>
+
+<li class="path-city">Philadelphia, Pennsylvania</li>
+<li class="date">September 2013</li>
+
+<li class="path-city">Washington, D.C.</li>
+<li class="date">September 2013</li>
+
+<li class="path-city">San Francisco, California</li>
+<li class="date">September 2013- ??</li>
 </ol>
