--- a/_posts/2013-09-16-why-being-a-digital-nomad-has-boosted-my-career.html
+++ b/_posts/2013-09-16-why-being-a-digital-nomad-has-boosted-my-career.html
@@ -5,7 +5,7 @@ comments: false
 date: 2013-09-16
 layout: post
 permalink: why-being-a-digital-nomad-has-boosted-my-career/
-title: 'Why Being a Digital Nomad has Boosted My Career'
+title: 'Why Being a Digital Nomad Boosted My Career'
 featured_img: "/images/2013/06/new-orleans-ferry.jpg"
 featured_alt: "Algiers Ferry, New Orleans"
 categories:
